    PRINT-NOT-READABLE error when *READ-EVAL* is NIL.  (reported by
    Faré Rideau)
  * bug fix: GET-INTERNAL-REAL-TIME now works even for processes that
    have been running for over 50 days. (reported by Gilbert Baumann)
  * bug fix: the logic for getting names of functions gets less
    confused when confronded with alternate-metaclass
    funcallable-instances.  (reported by Cyrus Harmon)
  * threads
    ** bug fix: parent thread now can be gc'ed even with a live
       child thread
    ** bug fix: binding a special with PROGV to no value is not
       the same as that symbol not having been bound (thanks to
       Hannu Koivisto)
    ** bug fix: binding specials is thread safe (thanks to
       Hannu Koivisto)
    ** bug fix: interrupt handlers are now per-process, RUN-PROGRAM
       and SB-SPROF do not die with 'no handler for signal XX in
       interrupt_handle_now(..)' anymore
    ** bug fix: WITH-TIMEOUT works with multiple running threads
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** ENSURE-GENERIC-FUNCTION should take a method class object for
       the :method-class keyword argument.

changes in sbcl-0.9.4 relative to sbcl-0.9.3:
  * new port: the Solaris operating system on x86 processors is now
    mostly supported, though some rough edges in the environment
    remain.  (thanks to Daisuke Homma)
  * enhancement: SBCL on MIPS platforms now has a much larger dynamic
    space for its heap.  (thanks to Thiemo Seufer)
  * optimization: SBCL on MIPS platforms now supports dynamic-extent
    closures.  (thanks to Thiemo Seufer)
  * minor incompatible change: eof selects abort in the debugger.
  * minor incompatible change: *INVOKE-DEBUGGER-HOOK* is run before
    *DEBUGGER-HOOK* => *DEBUGGER-HOOK* is not run when the debugger
    is disabled.
  * minor incompatible change: SB-KERNEL:INSTANCE-LAMBDA is
    deprecated, and will go away in a future revision of SBCL.
  * minor incompatible change: GC-ON and GC-OFF are no longer