@@ -26,6 +26,8 @@ changes in sbcl-0.9.5 relative to sbcl-0.9.4:
   * bug fix: the logic for getting names of functions gets less
     confused when confronded with alternate-metaclass
     funcallable-instances.  (reported by Cyrus Harmon)
+  * bug fix: FUNCTIONP and (LAMBDA (X) (TYPEP X 'FUNCTION)) are now
+    consistent, even on internal alternate-metaclass objects.
   * threads
     ** bug fix: parent thread now can be gc'ed even with a live
        child thread
